[project]
name = "textual-timepiece"
version = "0.1.0"
description = "Various time related widgets & functionality for Textual."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
    "whenever>=0.6.16",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "textual-dev>=1.7.0"]
